# ccm-project

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  plots.ipynb  pyproject.toml
notebooks/: overlap.ipynb  plots.ipynb  wandb_pull.ipynb
notebooks/artifacts/run-62c0723j-history:v0/: 0000.parquet
notebooks/artifacts/run-7tqt30v9-history:v0/: 0000.parquet
notebooks/artifacts/run-aai2oeo1-history:v0/: 0000.parquet
notebooks/artifacts/run-ewnoclbp-history:v0/: 0000.parquet
notebooks/artifacts/run-kaglq34t-history:v0/: 0000.parquet
notebooks/artifacts/run-kpw4h2ja-history:v0/: 0000.parquet
notebooks/artifacts/run-kpwe5bnd-history:v0/: 0000.parquet
notebooks/artifacts/run-kpwe5bnd-vocab:v0/: vocab.table.json
notebooks/artifacts/run-rav8hjii-history:v0/: 0000.parquet
notebooks/artifacts/run-rav8hjii-vocab:v0/: vocab.table.json
notebooks/artifacts/run-s63b75cv-history:v0/: 0000.parquet
notebooks/artifacts/run-twfi7no6-history:v0/: 0000.parquet
notebooks/artifacts/run-twfi7no6-vocab:v0/: vocab.table.json
notebooks/artifacts/run-y6fbl6hh-history:v0/: 0000.parquet
notebooks/artifacts/run-y6fbl6hh-vocab:v0/: vocab.table.json
scripts/: run.sh  slurm.sh
src/: character_tokenizer.py  data.py  metrics.py  tokenizer_metrics.py  tokenizer_trainers.py  train.py
