[project]

name = "ccm-project"
version = "0.1.0"
description = "Term project for Computational Cognitive Modeling"
readme = "README.md"
authors = [
    { name = "Jackson Petty", email = "research@jacksonpetty.org" },
    { name = "William Timkey", email = "wpt2011@nyu.edu" },
    { name = "Cara Leong", email = "caraleong@nyu.edu" }
]

dependencies = [
    "datasets == 2.19.0",
    "accelerate == 0.29.2",
    "fire == 0.6.0",
    "humanize == 4.9.0",
    "ipykernel == 6.29.4",
    "wandb == 0.16.6",
    "tqdm == 4.66.2",
    "osfclient == 0.0.5",
    "python-dotenv == 1.0.1",
    "pyrootutils == 1.0.4",
    "transformers == 4.39.3",
    "torch == 2.3.0",
    "scipy == 1.13.0",
    "unidecode == 1.3.8"
]

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
# ignore = ["D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
